調整footer和l項目ist間距

--- a/page-list-cn.html
+++ b/page-list-cn.html
@@ -416,9 +416,9 @@
         </div>
     </div>
     <footer class="footer" data-aos="fade-down" data-aos-duration="600" data-aos-anchor-placement="top-bottom"><!--footer-->
-        <div class="container text-center">
-            <p class="footer-link"><a href="#">網站首頁</a>&ensp;|&ensp;<a href="#">聯繫與支持</a>&ensp;|&ensp;<a href="#">條款和條件</a>&ensp;|&ensp;<a href="#">隱私政策</a></p>
-            <p>Copyright © 衛生福利部中央健康保險署 All Rights Reserved.</p>
+        <div class="container fs-14 text-center">
+            <p class="footer-link mb-2"><a href="#">網站首頁</a>&ensp;|&ensp;<a href="#">聯繫與支持</a>&ensp;|&ensp;<a href="#">條款和條件</a>&ensp;|&ensp;<a href="#">隱私政策</a></p>
+            <p class="mb-0">Copyright © 衛生福利部中央健康保險署 All Rights Reserved.</p>
         </div>
     </footer><!--/footer-->
 
