--- a/page-list.html
+++ b/page-list.html
@@ -372,9 +372,9 @@
         </div>
     </div>
     <footer class="footer" data-aos="fade-down" data-aos-duration="600" data-aos-anchor-placement="top-bottom"><!--footer-->
-        <div class="container text-center">
-            <p class="footer-link"><a href="#">Home page</a>&ensp;|&ensp;<a href="#">Connect</a>&ensp;|&ensp;<a href="#">Terms</a>&ensp;|&ensp;<a href="#">Privacy</a></p>
-            <p>Copyright © 衛生福利部中央健康保險署 All Rights Reserved.</p>
+        <div class="container fs-14 text-center">
+            <p class="footer-link mb-2"><a href="#">Home page</a>&ensp;|&ensp;<a href="#">Connect</a>&ensp;|&ensp;<a href="#">Terms</a>&ensp;|&ensp;<a href="#">Privacy</a></p>
+            <p class="mb-0">Copyright © 衛生福利部中央健康保險署 All Rights Reserved.</p>
         </div>
     </footer><!--/footer-->
 
