--- a/index-cn.html
+++ b/index-cn.html
@@ -303,7 +303,7 @@
         </div>
         <div class="section bg-section">
             <div class="container">
-                <h2 class="headline-title ic-headline01 mb-3 mb-md-5" data-aos="fade-right">熱門檢索<span></span></h2>
+                <h2 class="headline-title ic-headline01 mb-3 mb-md-5" data-aos="fade-right">熱門檢索</h2>
                 <div id="project-rd01" class="owl-carousel owl-theme mb-5">
                     <div class="rd-item" data-aos="fade-left" data-aos-delay="200" data-aos-duration="600">
                         <a class="project-item con-block h-100" href="#">
@@ -366,7 +366,7 @@
                         </a>
                     </div>
                 </div>
-                <h2 class="headline-title ic-headline02 mb-3 mb-md-5" data-aos="fade-right">推薦文章<span></span></h2>
+                <h2 class="headline-title ic-headline02 mb-3 mb-md-5" data-aos="fade-right">推薦文章</h2>
                 <div id="project-rd02" class="owl-carousel owl-theme">
                     <div class="rd-item" data-aos="fade-left" data-aos-delay="200" data-aos-duration="600">
                         <a class="project-item con-block h-100" href="#">
@@ -435,7 +435,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6 mb-5 mb-md-0" data-aos="fade-up" data-aos-duration="600">
-                        <h2 class="subtitle big mb-4">JCR自然科學版本 Science Edition<span></span></h2>
+                        <h2 class="subtitle big mb-4">JCR自然科學版本 Science Edition</h2>
                         <div class="con-block overflow-hidden py-2">
                             <ul class="list-unstyled mb-0">
                                 <li class="block-list-item list-arrow">
@@ -517,7 +517,7 @@
                         </div>
                     </div>
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
-                        <h2 class="subtitle big mb-4">JCR社會科學版本 Social Sciences Edition<span></span></h2>
+                        <h2 class="subtitle big mb-4">JCR社會科學版本 Social Sciences Edition</h2>
                         <div class="con-block overflow-hidden py-2">
                             <ul class="list-unstyled mb-0">
                                 <li class="block-list-item list-arrow">
