--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                 <div class="row">
                     <div class="col-md-6 mb-4 mb-md-0" data-aos="fade-up" data-aos-duration="400">
                         <div class="con-block p-3 p-md-4">
-                            <h3 class="subtitle big mb-4">Number of papers<span></span></h3>
+                            <h3 class="subtitle big mb-4">Number of papers</h3>
                             <div class="p-2">
                                 <img class="img-fluid" src="images/analyze01.jpg" alt="">
                             </div>
@@ -249,7 +249,7 @@
                     </div>
                     <div class="col-md-6" data-aos="fade-up" data-aos-delay="200" data-aos-duration="600">
                         <div class="con-block p-3 p-md-4">
-                            <h3 class="subtitle big mb-4">Recently Published<span></span></h3>
+                            <h3 class="subtitle big mb-4">Recently Published</h3>
                             <div class="p-2">
                                 <img class="img-fluid" src="images/analyze02.jpg" alt="">
                             </div>
@@ -260,7 +260,7 @@
         </div>
         <div class="section bg-section">
             <div class="container">
-                <h2 class="headline-title ic-headline01 mb-3 mb-md-5" data-aos="fade-right">Top Searches<span></span></h2>
+                <h2 class="headline-title ic-headline01 mb-3 mb-md-5" data-aos="fade-right">Top Searches</h2>
                 <div id="project-rd01" class="owl-carousel owl-theme mb-5">
                     <div class="rd-item" data-aos="fade-left" data-aos-delay="200" data-aos-duration="600">
                         <a class="project-item con-block h-100" href="#">
@@ -323,7 +323,7 @@
                         </a>
                     </div>
                 </div>
-                <h2 class="headline-title ic-headline02 mb-3 mb-md-5" data-aos="fade-right">Featured Articles<span></span></h2>
+                <h2 class="headline-title ic-headline02 mb-3 mb-md-5" data-aos="fade-right">Featured Articles</h2>
                 <div id="project-rd02" class="owl-carousel owl-theme">
                     <div class="rd-item" data-aos="fade-left" data-aos-delay="200" data-aos-duration="600">
                         <a class="project-item con-block h-100" href="#">
